# wasm-chord

./: .editorconfig  .gitignore  .rustfmt.toml  ASYNC_API_VERIFICATION_REPORT.md  ATTENTION_COMPLETE.md  BUGS_FIXED.md  CI_CD_SETUP.md  Cargo.toml  DEBUGGING_SESSION.md  DEBUG_LOG.md  LICENSE-APACHE  LICENSE-MIT  MASTER_ROADMAP.md  Makefile  NEXT_SESSION_PREP.md  PHASE1_COMPLETE.md  PHASE1_COMPLETION_STATUS.md  PHASE2_COMPLETE.md  PHASE2_PLAN.md  PHASE2_ULTRATHINK.md  PROGRESS.md  QUICKSTART.md  README.md  ROADMAP_STATUS.md  SESSION_STATUS.md  SESSION_SUMMARY.md  STATUS.md  TOKEN_LOOP_DEBUG.md  debug-model-creation.html  debug-model.js  debug_attention.md  deny.toml  package.json  reference_data.json  test-async-api.html  test-webgpu-comprehensive.js  test_compare_ollama.sh  test_models.sh  test_ollama_tokens.sh  test_output.txt  (+1 more)
.cargo/: config.toml
.github/: benchmark-baselines.json
crates/wasm-chord-core/: Cargo.toml
crates/wasm-chord-core/benches/: tensor_ops.rs
crates/wasm-chord-core/src/: error.rs  lib.rs  memory.rs  quant.rs  tensor.rs  tensor_loader.rs  tokenizer.rs
crates/wasm-chord-core/src/formats/: gguf.rs
crates/wasm-chord-core/tests/: integration_inference_simple.rs
crates/wasm-chord-cpu/: Cargo.toml
crates/wasm-chord-cpu/benches/: fused_kernels.rs  gemm.rs
crates/wasm-chord-cpu/src/: benchmark.rs  candle_backend.rs  candle_gpu_backend.rs  candle_tensor_backend.rs  fused.rs  gemm.rs  kernels.rs  lib.rs
crates/wasm-chord-gpu/: Cargo.toml
crates/wasm-chord-gpu/src/: backend.rs  candle_backend.rs  lib.rs  matmul.wgsl  matmul_tiled.wgsl  rmsnorm.wgsl  rope.wgsl  softmax.wgsl
crates/wasm-chord-gpu/tests/: gpu_backend_test.rs
crates/wasm-chord-runtime/: Cargo.toml  wasm-pack.toml
crates/wasm-chord-runtime/benches/: attention.rs
crates/wasm-chord-runtime/pkg-template/: README.md  package.json
crates/wasm-chord-runtime/src/: abi.rs  async_prefetch.rs  benchmark.rs  cache.rs  cache_aware_blocking.rs  chat.rs  context.rs  gpu_integration_test.rs  inference.rs  lib.rs  matmul_dispatch.rs  memory.rs  memory64.rs  memory64_ffi.rs  memory64_gguf.rs  memory64_host.rs  memory64_layer_manager.rs  memory64_model.rs  memory_pool.rs  multi_memory.rs  multithreading.rs  sampling.rs  sharding.rs  streaming.rs  tensor_loader_ext.rs  transformer.rs  web.rs  weight_format.rs
crates/wasm-chord-runtime/src/attention/: config.rs  cuda_wrapper.rs  flash.rs  flash_attention.cu  mod.rs  standard.rs
crates/wasm-chord-runtime/src/transformer/: attention.rs  config.rs  debug_weights.rs  ffn.rs  focused_debug.rs  kv_cache.rs  layer.rs  mod.rs  model.rs
crates/wasm-chord-runtime/tests/: inspect_tokenizer_metadata.rs  integration_simple.rs  real_model_test.rs  test_attention.rs  test_generation.rs  test_generation_debug.rs  test_generation_minimal.rs  test_integration.rs  test_integration_advanced.rs  test_kv_cache_fix.rs  test_model_components.rs  test_quantization_accuracy.rs  test_rope.rs  test_tokenizer.rs  test_transformer_modules.rs  test_weight_loading.rs
docs/: ALL_QUANTIZATION_FORMATS_COMPLETE.md  ANALYSIS.md  ASYNC_PREFETCH_IMPLEMENTATION.md  ASYNC_PREFETCH_PRODUCTION_ASSESSMENT.md  ASYNC_PREFETCH_SUMMARY.md  BENCHMARK_VERIFICATION.md  BUG_ANALYSIS.md  BUG_FIXES_SESSION.md  BUG_FIX_SUMMARY.md  COMPREHENSIVE_REVIEW.md  CONTRIBUTING.md  DEFERRED_ITEMS_AUDIT.md  DISPATCH_VERIFICATION.md  FINAL_SESSION_SUMMARY.md  FINDINGS.md  FLASH_ATTENTION_QUICKSTART.md  FUSED_KERNEL_BUG_FIX.md  FUSED_KERNEL_DEMO_RESULTS.md  FUSED_KERNEL_INTEGRATION_COMPLETE.md  FUSED_KERNEL_INTEGRATION_GUIDE.md  GPU_BACKENDS.md  GPU_DETECTION_FIX_REPORT.md  GPU_IMPLEMENTATION.md  GPU_INTEGRATION_COMPLETE.md  GPU_SETUP_STATUS.md  GPU_STATUS_AND_NEXT_STEPS.md  INFERENCE_INTEGRATION_PLAN.md  INTEGRATION_COMPLETE.md  INTEGRATION_PROGRESS.md  INTEGRATION_STATUS.md  INTEGRATION_TESTS_COMPLETE.md  MEMORY64_ARCHITECTURE_REVIEW.md  MEMORY64_BUILD.md  MEMORY64_GUIDE.md  MEMORY64_INTEGRATION_COMPLETE.md  MEMORY64_MODEL_INTEGRATION_PLAN.md  MISSION_ACCOMPLISHED.md  NEXT_STEPS.md  NO_REGRESSION_VERIFICATION.md  OPTIMIZATION_RESTORE_COMPLETE.md  (+57 more)
examples/: debug-embedding.rs  debug-forward-pass.rs  flash-attention-demo.rs
examples/abi-tests/: Cargo.toml
examples/abi-tests/src/: capital_test.rs  direct_test.rs  serialization_test.rs
examples/async-prefetch-benchmark/: Cargo.toml
examples/async-prefetch-benchmark/src/: main.rs
examples/benchmark/: Cargo.toml
examples/benchmark/src/: main.rs
examples/cli/: Cargo.toml
examples/cli/src/: main.rs
examples/fused-kernels-test/: Cargo.toml  main.rs
examples/gpu-generation/: Cargo.toml  README.md
examples/gpu-generation/src/: main.rs
examples/memory64-model-test/: Cargo.toml  README.md
examples/memory64-model-test/src/: main.rs
examples/memory64-simple/: Cargo.toml  README.md
examples/memory64-simple/src/: lib.rs  runner.rs
examples/simple-generation/: Cargo.toml  main.rs
examples/test-capital-gpu/: Cargo.toml
examples/test-capital-gpu/src/: main.rs
examples/wasm-capital-test/: ASYNC_API_VERIFICATION.md  CI_TEST_SETUP.md  Cargo.toml  GPU_DETECTION_COMPLETE.md  README.md  package.json  test-async.html  test-runtime.html  test-wasm-node.js  test-wasm-node.mjs  test-webgpu.html  test.html  test.js
examples/wasm-capital-test/src/: lib.rs
examples/wasm-memory64-multi-test/: Cargo.toml  README.md  REAL_MEMORY64_SUMMARY.md  analyze-memory64.js  break-test.html  build.sh  compare-memory64.js  comparison-test.html  comprehensive-analysis.js  focused-difference.js  index.html  memory64-test.html  real-memory64-test.html  simple-test.html  test-break-limit.js  test-expected-behavior.js  test-node.js  test-real-memory64.js  test-wasm-conservative.js  test-wasm-memory.js  test-wasm-simple.js  test.html
examples/wasm-memory64-multi-test/src/: lib.rs  real_memory64.rs
pr_docs/: PHASE1_ISSUES.md  PROJECT_SUMMARY.md  README.md  SPRINT1_PROGRESS.md  STATUS_REPORT.md
scripts/: analyze_divergence.py  analyze_intermediate.py  benchmark-performance.sh  benchmark_comparison.py  benchmark_memory64.sh  build_packages.sh  check_yes_token.py  (+41 more)
(+157 files in other folders)
