[package]
name = "wasm-chord-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core inference primitives and tensor operations for wasm-chord"

[dependencies]
bytemuck = { workspace = true }
half = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ndarray = { workspace = true }
unicode-normalization = "0.1"

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "tensor_ops"
harness = false
