[package]
name = "wasm-chord-cpu"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CPU backend with SIMD kernels for wasm-chord"

[dependencies]
wasm-chord-core = { workspace = true }
bytemuck = { workspace = true }
rayon = { workspace = true }
ndarray = { workspace = true }
half = { workspace = true }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }

# Candle for optimized CPU matmul and GPU support
candle-core = { workspace = true }
candle-nn = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# getrandom 0.3 is pulled in by candle/rand 0.9, need wasm_js feature
getrandom_0_3 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[features]
default = []
gpu = ["wasm-chord-gpu"]
cuda = ["candle-core/cuda", "gpu", "wasm-chord-gpu/cuda"]
metal = ["candle-core/metal", "gpu", "wasm-chord-gpu/metal"]

[dependencies.wasm-chord-gpu]
workspace = true
optional = true

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "gemm"
harness = false

[[bench]]
name = "fused_kernels"
harness = false
