[package]
name = "wasm-chord-gpu"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "WebGPU backend for wasm-chord"

[dependencies]
wasm-chord-core = { workspace = true }
wgpu = { workspace = true, features = ["wgsl"] }
bytemuck = { workspace = true }
futures = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4"
web-sys = { workspace = true, features = ["Gpu", "GpuAdapter", "GpuDevice"] }
