[package]
name = "wasm-chord-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "WebAssembly runtime with C ABI for wasm-chord"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
# Optimize for size and performance
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-chord-core = { workspace = true }
wasm-chord-cpu = { workspace = true }
wasm-chord-gpu = { workspace = true, optional = true }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
pollster = { version = "0.3", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { workspace = true }
wasm-bindgen-futures = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = { workspace = true }

[features]
default = []
gpu = ["wasm-chord-gpu", "pollster"]
memory64 = []

[[bench]]
name = "attention"
harness = false
