[package]
name = "wasm-chord-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "WebAssembly runtime with C ABI for wasm-chord"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
# Optimize for size and performance
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-chord-core = { workspace = true }
wasm-chord-cpu = { workspace = true }
wasm-chord-gpu = { workspace = true, optional = true }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand = "0.9.2"
pollster = { version = "0.4.0", optional = true }
anyhow = { version = "1.0", optional = true }
wasmtime = { version = "29.0.0", optional = true }
parking_lot = { version = "0.12.5", optional = true }
log = { version = "0.4", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { workspace = true }
wasm-bindgen-futures = "0.4"
# getrandom 0.3 is pulled in by candle/rand 0.9, need wasm_js feature
getrandom_0_3 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = { workspace = true }
half = { workspace = true }

[features]
default = []  # CPU-only by default (smallest, works everywhere)
cuda = ["dep:wasm-chord-gpu", "wasm-chord-gpu/cuda"]  # Candle GPU with CUDA (NVIDIA)
metal = ["dep:wasm-chord-gpu", "wasm-chord-gpu/metal"]  # Candle GPU with Metal (Apple)
webgpu = ["dep:wasm-chord-gpu", "wasm-chord-gpu/default", "pollster"]  # WebGPU for browsers
memory64 = ["memory64-host", "memory64-wasm"]  # Full Memory64 support (host + WASM)
memory64-host = ["dep:anyhow", "dep:wasmtime", "dep:parking_lot", "log"]  # Memory64 host runtime (Wasmtime)
memory64-wasm = ["dep:anyhow"]  # Memory64 WASM-side FFI bindings

[[bench]]
name = "attention"
harness = false
