[package]
name = "async-prefetch-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-chord-core = { path = "../../crates/wasm-chord-core" }
wasm-chord-runtime = { path = "../../crates/wasm-chord-runtime", features = ["async-prefetch"] }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
