[package]
name = "wasm-chord-benchmark"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "benchmark"
path = "src/main.rs"

[dependencies]
wasm-chord-core = { workspace = true }
wasm-chord-cpu = { workspace = true }
wasm-chord-runtime = { workspace = true }
wasm-chord-gpu = { workspace = true, optional = true }
pollster = { version = "0.3", optional = true }

[features]
default = []
gpu = ["wasm-chord-gpu", "pollster", "wasm-chord-runtime/gpu"]
