[package]
name = "wasm-chord-gpu-generation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "gpu-generation"
path = "src/main.rs"

[dependencies]
wasm-chord-core = { workspace = true }
wasm-chord-runtime = { workspace = true, features = ["gpu"] }
