[package]
name = "memory64-model-test"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-chord-core = { workspace = true }
wasm-chord-runtime = { workspace = true, features = ["memory64"] }

[features]
async-prefetch = ["wasm-chord-runtime/async-prefetch"]
cuda = ["wasm-chord-runtime/cuda"]
metal = ["wasm-chord-runtime/metal"]
