[package]
name = "memory64-simple"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "runner"
path = "src/runner.rs"
required-features = ["runner"]

[dependencies]
# Runner dependencies (native only)
wasmtime = { version = "27.0", optional = true }
anyhow = { version = "1.0", optional = true }

[features]
default = []
runner = ["wasmtime", "anyhow"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
