[package]
name = "wasm-chord-simple-generation"
version.workspace = true
edition.workspace = true

[[bin]]
name = "simple-generation"
path = "main.rs"

[dependencies]
wasm-chord-core.workspace = true
wasm-chord-runtime.workspace = true

[features]
default = []
cuda = ["wasm-chord-runtime/cuda"]
metal = ["wasm-chord-runtime/metal"]
webgpu = ["wasm-chord-runtime/webgpu"]
