[package]
name = "test-capital-gpu"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-chord-core = { path = "../../crates/wasm-chord-core" }
wasm-chord-runtime = { path = "../../crates/wasm-chord-runtime" }
anyhow = "1.0"

[features]
default = []
cuda = ["wasm-chord-runtime/cuda"]
metal = ["wasm-chord-runtime/metal"]

[workspace]
