[package]
name = "wasm-memory64-multi-test"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-chord-runtime.workspace = true
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
js-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
memory64 = ["wasm-chord-runtime/memory64"]
threads = []
simd = []

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false
